[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "write-sense-agent"
version = "0.1.0"
description = "A LangGraph-based agent system with MCP server orchestration for handling multiple tool servers"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.39",
    "langchain>=0.3.7",
    "langchain-anthropic>=0.2.4",
    "langchain-openai>=0.2.8",
    "langchain-community>=0.3.7",
    "langgraph-cli",
    "langgraph-api",
    "mcp>=1.0.0",   
    "langchain-mcp-adapters>=0.1.0",
    "pydantic>=2.9.0",
    "uvicorn>=0.32.1",
    "fastapi>=0.115.4",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.10.0",
    "requests>=2.31.0",
    "python-multipart>=0.0.6",
    "tavily-python>=0.7.6",
    "langchain-tavily>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.11.0",
    "ruff>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/write-sense-agent"
Repository = "https://github.com/yourusername/write-sense-agent"
Issues = "https://github.com/yourusername/write-sense-agent/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "ANN", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["ANN101", "ANN102", "COM812", "ISC001"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"] 